working on gh-pages content

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 		}
 		#header {
 			background-color: #FF6600;
+			margin-bottom: 20px;
+		}
+		#header img {
+			border: 1px solid #fff;
+		}
+		#header span {
+			font-weight: bold;
+			font-family: sans-serif;
 		}
 	</style>
 </head>
