--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 			font-weight: bold;
 			font-family: sans-serif;
 		}
+		#content {
+			padding: 10px;
+		}
+		#content a {
+			font-size: 11px;
+			color: #666;
+		}
+		#content a:visited {
+			color: #666;
+		}
 	</style>
 </head>
 <body>
@@ -33,9 +43,11 @@
 		<img src="http://ycombinator.com/images/y18.gif" alt="Hacker News">
 		<span>Hacker News</span>
 	</div>
-	<p>hnCommentWatcher: yet another bookmarklet <a href="https://github.com/christopherdebeer/hnCommentWatcher">(https://github.com/christopherdebeer/hnCommentWatcher)</a></p>
-	<p>This is yet another bookmarklet for hacker news. by Christopher de Beer</p>
-	<a id="bookmerklet" href="javascript:(function(){window.hncBase='https://github.com/christopherdebeer/hnCommentWatcher/raw/master/';var%20a=document.getElementsByTagName('head')[0],b=document.createElement('script');b.type='text/javascript';b.src=hncBase+'hnCW.js?'+Math.floor(Math.random()*99999);a.appendChild(b);})();%20void%200">hnCommentWatcher</a>
+	<div id="content">
+		<p>hnCommentWatcher: yet another bookmarklet <a href="https://github.com/christopherdebeer/hnCommentWatcher">(https://github.com/christopherdebeer/hnCommentWatcher)</a></p>
+		<p>This is yet another bookmarklet for hacker news. by Christopher de Beer</p>
+		<a id="bookmerklet" href="javascript:(function(){window.hncBase='https://github.com/christopherdebeer/hnCommentWatcher/raw/master/';var%20a=document.getElementsByTagName('head')[0],b=document.createElement('script');b.type='text/javascript';b.src=hncBase+'hnCW.js?'+Math.floor(Math.random()*99999);a.appendChild(b);})();%20void%200">hnCommentWatcher</a>
+	</div>
 </div>
 
 </body>
