gh-pages styling and next button css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<style type="text/css">
 		html, body {
 			background-color: #fff;
-			margin: 0;
-			padding: 0;
 			font-family: Verdana, sans-serif;
 			font-size: 12px;
 		}
@@ -17,12 +15,17 @@
 		}
 		#header {
 			background-color: #FF6600;
+			padding: 2px;
 		}
 		#header img {
 			border: 1px solid #fff;
 		}
 		#header span {
-			font-weight: bold;
+			display: inline-block;
+		    font-weight: bold;
+		    height: 22px;
+		    line-height: 22px;
+		    vertical-align: top;
 		}
 		#content {
 			padding: 10px;
@@ -38,6 +41,7 @@
 		#content .subtext {
 			color: #828282;
     		font-size: 11px;
+    		margin-top: -8px;
 		}
 	</style>
 </head>
