added content to index.html for gh-pages

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 		<p class="subtext">9001 points by iambot 0 minutes ago | like | discuss</p>
 		<p>This is yet another bookmarklet for hacker news. by Christopher de Beer</p>
 		<a id="bookmerklet" href="javascript:(function(){window.hncBase='https://github.com/christopherdebeer/hnCommentWatcher/raw/master/';var%20a=document.getElementsByTagName('head')[0],b=document.createElement('script');b.type='text/javascript';b.src=hncBase+'hnCW.js?'+Math.floor(Math.random()*99999);a.appendChild(b);})();%20void%200">hnCommentWatcher</a>
+
+		<h2>Examples</h2>
+		<p><strong>OP</strong></p>
+		<p>OP (the original poster) is highlighted on each comment they make. this makes it easier to see what the person who posted the link to HN has contributed to the thread. The Image below is an example of how it would be styled/indicated.</p>
+		<img src="assets/example-op.png">
+		<p><strong>New Comments</strong></p>
+		<p>New comments are displayed in green (see example below). and the first new comment is scrolled into view by default. If there are > 1 new comments then each will have a button at the bottom linking to the next new comment, to make navigation easier.</p>
+		<img src="assets/example-new.png" alt="">
+		<p><strong>Newish comments</strong></p>
+		<p>When the page is reloaded by hnCommentWatcher comments that were new are marked in light green (see example below) for a short period before reverting to unstyled, this is so that when there is an update and you may not have read all the new comments in time, its easy to locate/identify "Newish" comments.</p>
+		<img src="assets/example-newish.png" alt="">
 	</div>
 </div>
 
