added example images

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     		font-size: 11px;
     		margin-top: -8px;
 		}
+		#content img {
+			border: 8px solid #FFFFFF;
+    		display: block;
+    		margin: 38px auto;
+		}
 	</style>
 </head>
 <body>
