added example images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		#content img {
 			border: 8px solid #FFFFFF;
     		display: block;
-    		margin: 38px auto;
+    		margin: 0 0 20px 42px;
 		}
 		#content #bookmarklet {
 			background-color: #FEFEFE;
@@ -98,19 +98,19 @@
 
 		<h2 id="eg">Examples</h2>
 		<div class="example">
+			<img src="assets/example-op.png">
 			<p><strong>OP</strong></p>
 			<p>OP (the original poster) is highlighted on each comment they make. this makes it easier to see what the person who posted the link to HN has contributed to the thread. The Image below is an example of how it would be styled/indicated.</p>
-			<img src="assets/example-op.png">
 		</div>
 		<div class="example">
+			<img src="assets/example-new.png" alt="">
 			<p><strong>New Comments</strong></p>
 			<p>New comments are displayed in green (see example below). and the first new comment is scrolled into view by default. If there are > 1 new comments then each will have a button at the bottom linking to the next new comment, to make navigation easier.</p>
-			<img src="assets/example-new.png" alt="">
 		</div>
 		<div class="example">
+			<img src="assets/example-newish.png" alt="">
 			<p><strong>Newish comments</strong></p>
 			<p>When the page is reloaded by hnCommentWatcher comments that were new are marked in light green (see example below) for a short period before reverting to unstyled, this is so that when there is an update and you may not have read all the new comments in time, its easy to locate/identify "Newish" comments.</p>
-			<img src="assets/example-newish.png" alt="">
 		</div>
 	</div>
 </div>
