added example images

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
 			<p>Disclaimer:</p>
 			<p>This is a work in progress I just made it, so it might be a bit buggy in some browsers that I havnt tested yet. Also this page could do with a few proof reads. If you have any feedback or bug reports, please post them to <a class="normalsize" href="https://github.com/christopherdebeer/hnCommentWatcher/issues">the issues page of this projects github repo</a>. </p>
-			<p></p>
-			<p>Thank you and good night <br/>Christopher de beer <br/> <a href="http://twitter.com/christopherdb" class="normalsize">@christopherdb</a></p>
+			<p>&nbsp;</p><p>&nbsp;</p>
+			<p><em>Thank you and good night,</em><br/>Christopher de beer <br/> <a href="http://twitter.com/christopherdb" class="normalsize">@christopherdb</a></p>
 		</div>
 
 
