--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</div>
 
 
-		<h2 id="eg">Examples</h2>
+		<h2 id="eg">Screenshots</h2>
 		<div class="example">
 			<img src="assets/example-op.png">
 			<p><strong>OP</strong></p>
