added swatch image and example to gh-pages content

--- a/index.html
+++ b/index.html
@@ -107,11 +107,6 @@
 
 		<h2 id="eg">Screenshots</h2>
 		<div class="example">
-			<img src="assets/example-op.png">
-			<p><strong>OP</strong></p>
-			<p>OP (the original poster) is highlighted on each comment they make. this makes it easier to see what the person who posted the link to HN has contributed to the thread. The Image below is an example of how it would be styled/indicated.</p>
-		</div>
-		<div class="example">
 			<img src="assets/example-new.png" alt="">
 			<p><strong>New Comments</strong></p>
 			<p>New comments are displayed in green (see example below). and the first new comment is scrolled into view by default. If there are > 1 new comments then each will have a button at the bottom linking to the next new comment, to make navigation easier.</p>
@@ -120,6 +115,16 @@
 			<img src="assets/example-newish.png" alt="">
 			<p><strong>Newish comments</strong></p>
 			<p>When the page is reloaded by hnCommentWatcher comments that were new are marked in light green (see example below) for a short period before reverting to unstyled, this is so that when there is an update and you may not have read all the new comments in time, its easy to locate/identify "Newish" comments.</p>
+		</div>
+		<div class="example">
+			<img src="assets/example-op.png">
+			<p><strong>OP</strong></p>
+			<p>OP (the original poster) is highlighted on each comment they make. this makes it easier to see what the person who posted the link to HN has contributed to the thread. The Image below is an example of how it would be styled/indicated.</p>
+		</div>
+		<div class="example">
+			<img src="assets/example-colour.png">
+			<p><strong>User swatches</strong></p>
+			<p>Each user will have a coloured swatch next to thier comments, so as to make it easier to identify/differentiate-between users and associatd mulitple posts by the same user. It isnt fool proof as some colours might end up looking similar (the string to hex colour function isnt ideal).</p>
 		</div>
 	</div>
 </div>
